--- a/TickTackToe.Api/appsettings.json
+++ b/TickTackToe.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Game" : "Data Source=Game.db"
+  }
 }
