--- a/TickTackToe.Api/appsettings.json
+++ b/TickTackToe.Api/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Info",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command" : "Warning"
     }
   },
   "AllowedHosts": "*",
