Integrating with DB

--- a/TickTackToe.Api/TickTackToe.Api.csproj
+++ b/TickTackToe.Api/TickTackToe.Api.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="MinimalApis.Extensions" Version="0.11.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\Migrations\" />
+    </ItemGroup>
+
 </Project>
