--- a/TickTackToe.Api/Properties/launchSettings.json
+++ b/TickTackToe.Api/Properties/launchSettings.json
@@ -7,7 +7,11 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:8080",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BOARD_SIZE": "3",
+        "TURN_COUNT": "3",
+        "SWITCH_CHANCE": "10",
+        "WIN_CONDITION": "3"
       }
     },
     "https": {
