Integrate dependency inversion for GameService and ETagService

--- a/TickTackToe.Tests/TickTackToe.Tests.csproj
+++ b/TickTackToe.Tests/TickTackToe.Tests.csproj
@@ -18,4 +18,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TickTackToe.Api\TickTackToe.Api.csproj" />
+    </ItemGroup>
+
 </Project>
