--- a/TickTackToe.Api/appsettings.json
+++ b/TickTackToe.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Info",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command" : "Warning"
     }
